Fix issue with person cards on IE

--- a/stylesheets/components/card/_person.styl
+++ b/stylesheets/components/card/_person.styl
@@ -16,10 +16,11 @@
 
 .cdp
   display: flex
-  flex-direction: column
+  flex-wrap: wrap
 
   &-a
     line-height: $line-height-000
+    width: 100%
 
   &-t
     line-height: $line-height-100
@@ -29,7 +30,7 @@
     align-items: center
     background-color: $grey-000
     text-align: left
-    flex: 1
+    width: 100%
 
     @media $media-large
       display: block
